# zk_scratch

./: Anchor.toml  Cargo.toml  README.md  TESTING_PLAN.md  tsconfig.json
ceremony/: README.md
circuits/: README.md  compile.sh  final_test_input.json  merkleTree.circom  package.json  poseidon.circom  proof_final.json  public_final.json  withdraw.circom  withdraw.r1cs  withdraw.sym  withdraw.wasm  withdraw_0000.zkey
circuits/test/: circuit_test.js  parameter_verification.js
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/public/circuits/: verification_key.json
frontend/src/: index.css
frontend/src/components/ui/: button.tsx  slider.tsx
frontend/src/lib/: program.ts  tornado_solana.json
frontend/src/lib/circuits/: merkleTree.ts  mockProofGeneration.ts  noteManager.ts  poseidon.ts  programInitialization.ts  proofGeneration.ts
onchain-circuits/: corrected_input.json  debug_circuit.js  final_input.json  generate_valid_input.js  package-lock.json  proof.json  proof_corrected.json  public.json  public_corrected.json  test_input.json  valid_input.json  verify_poseidon_compatibility.js
onchain-program/: Anchor.toml  Cargo.toml  README.md  convert_verification_key.js  package.json  verification_key.json
onchain-program/programs/tornado-solana/: Cargo.toml
onchain-program/programs/tornado-solana/src/: errors.rs  lib.rs  merkle_tree.rs
onchain-program/programs/tornado-solana/src/instructions/: deposit.rs  initialize.rs  initialize_merkle_tree.rs  initialize_nullifier_set.rs  initialize_pool.rs  initialize_verification_key.rs  mod.rs  withdraw.rs
onchain-program/programs/tornado-solana/src/state/: mod.rs
onchain-program/tests/: tornado-solana.ts
programs/tornado_mixer/: Cargo.toml  convert_vk.js
programs/tornado_mixer/src/: constants.rs  errors.rs  lib.rs  state.rs  verifying_key.rs
programs/tornado_mixer/src/instructions/: deposit.rs  initialize.rs  mod.rs  withdraw.rs
programs/tornado_mixer/src/ix/: deposit.rs  initialize.rs
scripts/: README.md  deposit.ts  init.ts  tornado_mixer.json  withdraw.ts
solana-program/: Cargo.toml  README.md
solana-program/src/: lib.rs
solana-program/src/instructions/: withdraw.rs
solana-program/tornado-solana/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
solana-program/tornado-solana/migrations/: deploy.ts
solana-program/tornado-solana/programs/tornado-solana/: Cargo.toml
solana-program/tornado-solana/programs/tornado-solana/src/: errors.rs  events.rs  lib.rs  state.rs  verifying_key.rs
solana-program/tornado-solana/programs/tornado-solana/src/instructions/: deposit.rs  initialize_tree.rs  mod.rs  withdraw.rs
solana-program/tornado-solana/tests/: tornado-solana.ts
