[workspace]
resolver = "2"

members = [
    "programs/*"
]
[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"

solana-program = "1.18.18"
spl-noop = "0.3.0"
spl-account-compression = { version = "0.4.0", features = ["cpi"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
