[workspace]
resolver = "2"
members = ["programs/*"]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"
# Move compression to the 1.18-era crate line
spl-account-compression = { version = "0.4.0", features = ["cpi"] }
solana-program = "1.18.18"   # <- add this line if you insist

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
