[workspace]
resolver = "2"
members = ["programs/*"]

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = "0.31.1"
# Move compression to the 1.18-era crate line
spl-account-compression = { version = "1.0.0", features = ["cpi", "idl-build"] }
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
