[package]
name = "tornado-mixer"
version = "0.1.0"
description = "Tornado Cash style mixer on Solana using Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.28.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git" }
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
bytemuck = "1.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }

[profile.release]
overflow-checks = true

