[package]
name = "tornado-mixer"
version = "0.1.0"
description = "Tornado Cash style mixer on Solana using Light Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["idl-build"] }
anchor-spl  = { workspace = true, features = ["idl-build"] }
spl-account-compression = { workspace = true }
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git" }
bytemuck = "1.14"
spl-noop = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
