[package]
name = "tornado-solana"
version = "0.1.0"
description = "Tornado Cash mixer with custom merkle tree implementation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana" }
light-poseidon = { git = "https://github.com/Lightprotocol/light-poseidon" }
ark-bn254 = "0.4"
