[package]
name = "tornado-solana"
version = "0.1.0"
description = "Privacy-preserving SOL mixer using ZK proofs and account compression"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-account-compression = "0.2.0"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana.git", branch = "anchor-0.29" }
